Setting up dir structure + styling for child theme

--- a/wp-content/themes/theblog-child/style.css
+++ b/wp-content/themes/theblog-child/style.css
@@ -1,6 +1,14 @@
 /*
 Theme Name: theblog-child
 Template: theblog
+
+Created for Open Food Network
+Laura Summers @summerscope 2015
+
 */
 
+/* base theme style */
 @import url("../theblog/style.css");
+
+/* child styles */
+@import url("css/home.css");
