Styling for navbar and homepage - child theme tweaks

--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -1,29 +1,39 @@
 
+$OFN-grey: #808284
+$OFN-dark-grey: #616466
+
+$OFN-green: #88bb7e
+$OFN-darker-green: #7bad71
 
 @mixin padding
 	padding-top: 2em
 	padding-bottom: 2em
 
+/* navbar */
+#off-canvas, #header-navigation
+	&.background-color-2
+		background-color: $OFN-green
+
 .home-support
 	@include padding
-	border-top: 1px solid red
-	border-bottom: 1px solid red
-	background-color: rgba(red, 0.1)
+	// border-top: 1px solid red
+	// border-bottom: 1px solid red
+	// background-color: rgba(red, 0.1)
 
 .home-brand-story
 	@include padding
-	border-top: 1px solid blue
-	border-bottom: 1px solid blue
-	background-color: rgba(blue, 0.1)
+	// border-top: 1px solid blue
+	// border-bottom: 1px solid blue
+	// background-color: rgba(blue, 0.1)
 
 .home-demographics
 	@include padding
-	border-top: 1px solid yellow
-	border-bottom: 1px solid yellow
-	background-color: rgba(yellow, 0.1)
+	// border-top: 1px solid yellow
+	// border-bottom: 1px solid yellow
+	// background-color: rgba(yellow, 0.1)
 
 .home-infographic
 	@include padding
-	border-top: 1px solid green
-	border-bottom: 1px solid green
-	background-color: rgba(green, 0.1)
+	// border-top: 1px solid green
+	// border-bottom: 1px solid green
+	// background-color: rgba(green, 0.1)
