--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -1,27 +1,19 @@
+/* navbar */
+#off-canvas.background-color-2, #header-navigation.background-color-2 {
+  background-color: #88bb7e; }
+
 .home-support {
   padding-top: 2em;
-  padding-bottom: 2em;
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
-  background-color: rgba(255, 0, 0, 0.1); }
+  padding-bottom: 2em; }
 
 .home-brand-story {
   padding-top: 2em;
-  padding-bottom: 2em;
-  border-top: 1px solid blue;
-  border-bottom: 1px solid blue;
-  background-color: rgba(0, 0, 255, 0.1); }
+  padding-bottom: 2em; }
 
 .home-demographics {
   padding-top: 2em;
-  padding-bottom: 2em;
-  border-top: 1px solid yellow;
-  border-bottom: 1px solid yellow;
-  background-color: rgba(255, 255, 0, 0.1); }
+  padding-bottom: 2em; }
 
 .home-infographic {
   padding-top: 2em;
-  padding-bottom: 2em;
-  border-top: 1px solid green;
-  border-bottom: 1px solid green;
-  background-color: rgba(0, 128, 0, 0.1); }
+  padding-bottom: 2em; }
