More WIP content generation

--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -36,6 +36,13 @@ h1, h2, h3, h4, h5, h6
 .text-larger
 	font-size: 1.41176em
 
+/* responsive images */
+
+.responsive-icon
+	width: 25%
+	@media all and (min-width: 768px)
+		width: 100%
+
 /* navbar  & homepage - custom color */
 #off-canvas, #header-navigation
 	&.background-color-2
