--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -19,6 +19,13 @@ h1.heading-normal, h2.heading-normal, h3.heading-normal, h4.heading-normal, h5.h
 .text-larger {
   font-size: 1.41176em; }
 
+/* responsive images */
+.responsive-icon {
+  width: 25%; }
+  @media all and (min-width: 768px) {
+    .responsive-icon {
+      width: 100%; } }
+
 /* navbar  & homepage - custom color */
 #off-canvas.background-color-2, #header-navigation.background-color-2 {
   background-color: #88bb7e; }
