--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -66,6 +66,12 @@ h1, h2, h3, h4, h5, h6
 h1, h2, h3, h4, h5, h6
 	clear: none
 
+h2, h3
+	margin-bottom: 0.75em
+
+h4, h5, h6
+	margin-bottom: 0.5em
+
 
 /* homepage */
 .home-support
