New file assets
More WIP styling

--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1
 	background-image: url('../img/tile-wide.png')
+	background-repeat: no-repeat
 	background-position: bottom center
 
 /* Container width overrides */
@@ -71,6 +72,19 @@ h2, h3, h4, h5, h6
 
 
 /* homepage */
+.header-v2.slider
+	.text-content
+		.text-1.font-1
+		.text-3.font-1
+			display: none
+		.text-2.font-3
+			text-align: center
+			font-family: 'Oswald'
+			font-weight: 400
+			font-size: 82px
+			margin-top: 40px
+
+
 .home-support
 	@include padding
 	background-color: rgba($OFN-green, 0.2)
