--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -33,6 +33,7 @@ h1.heading-normal, h2.heading-normal, h3.heading-normal, h4.heading-normal, h5.h
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1 {
   background-image: url("../img/tile-wide.png");
+  background-repeat: no-repeat;
   background-position: bottom center; }
 
 /* Container width overrides */
@@ -52,6 +53,15 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0.5em; }
 
 /* homepage */
+.header-v2.slider .text-content .text-3.font-1 {
+  display: none; }
+.header-v2.slider .text-content .text-2.font-3 {
+  text-align: center;
+  font-family: "Oswald";
+  font-weight: 400;
+  font-size: 82px;
+  margin-top: 40px; }
+
 .home-support {
   padding-top: 2em;
   padding-bottom: 2em;
