Blog page layout background color

--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -143,3 +143,9 @@ h2, h3, h4, h5, h6
 	// border-top: 1px solid green
 	// border-bottom: 1px solid green
 	// background-color: rgba(green, 0.1)
+
+// Blog & news pages only
+body.blog #body-wrap
+	background-color: #f2f2f2
+
+	
