--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -123,3 +123,6 @@ h2, h3, h4, h5, h6 {
 .home-infographic {
   padding-top: 2em;
   padding-bottom: 2em; }
+
+body.blog #body-wrap {
+  background-color: #f2f2f2; }
