--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -28,7 +28,10 @@ h1.heading-normal, h2.heading-normal, h3.heading-normal, h4.heading-normal, h5.h
 
 /* navbar  & homepage - custom color */
 #off-canvas.background-color-2, #header-navigation.background-color-2 {
-  background-color: #88bb7e; }
+  background-color: white; }
+
+header .nav-default > .navbar-default .navbar-nav > li > a {
+  color: rgba(128, 130, 132, 0.6); }
 
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1 {
@@ -126,3 +129,14 @@ h2, h3, h4, h5, h6 {
 
 body.blog #body-wrap {
   background-color: #f2f2f2; }
+
+.title-content {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2.5rem;
+  background-color: #88bb7e;
+  background-image: url("../img/tile-wide.png");
+  background-repeat: no-repeat;
+  background-position: top center; }
+  .title-content, .title-content * {
+    color: white; }
