--- a/wp-content/themes/theblog-child/style.css
+++ b/wp-content/themes/theblog-child/style.css
@@ -7,7 +7,7 @@ Laura Summers @summerscope 2015
 
 */
 
-/* base theme style */
+/* import no longer best practice: https://codex.wordpress.org/Child_Themes */
 @import url("../theblog/style.css");
 
 /* child styles */
