--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -44,9 +44,12 @@ h1, h2, h3, h4, h5, h6
 		width: 100%
 
 /* navbar  & homepage - custom color */
-#off-canvas, #header-navigation
+#off-canvas, #header-navigation,  
 	&.background-color-2
-		background-color: #f2f2f2
+		background-color: white
+body.home.page
+	.navbar.background-color-1 
+		background-color: white
 
 /* mobile navbar */
 header .nav-default > .navbar-default .navbar-toggle .icon-bar
