Fix hover style for top nav menu

--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -57,6 +57,8 @@ header .nav-default > .navbar-default .navbar-toggle .icon-bar
 
 header .nav-default > .navbar-default .navbar-nav > li > a
 	color: rgba($OFN-grey, 0.6)
+	&:hover, &:focus, &:active
+		color: rgba($OFN-grey, 1.0)
 
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1
