--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -39,6 +39,8 @@ header .nav-default > .navbar-default .navbar-toggle .icon-bar {
 
 header .nav-default > .navbar-default .navbar-nav > li > a {
   color: rgba(128, 130, 132, 0.6); }
+  header .nav-default > .navbar-default .navbar-nav > li > a:hover, header .nav-default > .navbar-default .navbar-nav > li > a:focus, header .nav-default > .navbar-default .navbar-nav > li > a:active {
+    color: #808284; }
 
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1 {
