--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -58,8 +58,8 @@ header .nav-default > .navbar-default .navbar-toggle .icon-bar
 
 header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a, .off-canvas-inner .off-menu > ul li a
 	color: rgba($OFN-grey, 0.6)
-	&:hover, &:focus, &:active
-		color: rgba($OFN-grey, 1.0) !important
+	&:hover, &:focus, &:active, header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a
+		color: rgba($OFN-grey, 1.0)
 
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1
