Breaking up CSS into clear partials for easier navigation and handover

--- a/wp-content/themes/theblog-child/style.css
+++ b/wp-content/themes/theblog-child/style.css
@@ -11,4 +11,4 @@ Laura Summers @summerscope 2015
 @import url("../theblog/style.css");
 
 /* child styles */
-@import url("css/home.css");
+@import url("css/style.css");
