--- a/wp-content/themes/theblog-child/css/home.css
+++ b/wp-content/themes/theblog-child/css/home.css
@@ -1,70 +1,14 @@
-/* helper classes */
-.uppercase {
-  text-transform: uppercase; }
-
-h1.heading-skinny, h2.heading-skinny, h3.heading-skinny, h4.heading-skinny, h5.heading-skinny, h6.heading-skinny {
-  font-weight: 300; }
-h1.heading-normal, h2.heading-normal, h3.heading-normal, h4.heading-normal, h5.heading-normal, h6.heading-normal {
-  font-weight: 400; }
-
-.text-skinny {
-  font-weight: 300; }
-
-.text-normal {
-  font-weight: 400; }
-
-.text-large {
-  font-size: 1.2352em; }
-
-.text-larger {
-  font-size: 1.41176em; }
-
-/* responsive images */
-.responsive-icon {
-  width: 25%; }
-  @media all and (min-width: 768px) {
-    .responsive-icon {
-      width: 100%; } }
-
-/* navbar  & homepage - custom color */
-#off-canvas.background-color-2, #header-navigation.background-color-2 {
-  background-color: white; }
-
-body.home.page .navbar.background-color-1 {
-  background-color: white; }
-
-/* mobile navbar */
-header .nav-default > .navbar-default .navbar-toggle .icon-bar {
-  background-color: #808284; }
-
-header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a, .off-canvas-inner .off-menu > ul li a {
-  color: rgba(128, 130, 132, 0.6); }
-  header .nav-default > .navbar-default .navbar-nav > li > a:hover, header .nav-default > .navbar-default .navbar-nav > li > a:focus, header .nav-default > .navbar-default .navbar-nav > li > a:active, header .nav-default > .navbar-default .navbar-nav > li > a header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a:hover, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a:focus, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a:active, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a, .off-canvas-inner .off-menu > ul li a:hover, .off-canvas-inner .off-menu > ul li a:focus, .off-canvas-inner .off-menu > ul li a:active, .off-canvas-inner .off-menu > ul li a header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a {
-    color: #808284; }
-
+/* Custom colors */
+/* Primary theme color - change this to represent your OFN instance: */
+/* Secondary theme colors */
+/* Mixins */
+/* homepage */
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1 {
   background-image: url("../img/tile-wide.png");
   background-repeat: no-repeat;
   background-position: bottom center; }
 
-/* Container width overrides */
-.cactus-single-page .single-page-content {
-  padding-left: 20px;
-  padding-right: 20px; }
-  @media all and (min-width: 1200px) {
-    .cactus-single-page .single-page-content {
-      padding-left: 60px;
-      padding-right: 60px; } }
-
-/* theme overrides */
-h1, h2, h3, h4, h5, h6 {
-  clear: none; }
-
-h2, h3, h4, h5, h6 {
-  margin-bottom: 0.5em; }
-
-/* homepage */
 .header-v2.slider .text-content .text-3.font-1 {
   display: none; }
 .header-v2.slider .text-content .text-2.font-3 {
@@ -135,17 +79,3 @@ h2, h3, h4, h5, h6 {
 .home-infographic {
   padding-top: 2em;
   padding-bottom: 2em; }
-
-body.blog #body-wrap {
-  background-color: #f2f2f2; }
-
-.title-content {
-  text-align: center;
-  padding-top: 3rem;
-  padding-bottom: 3.5rem;
-  background-color: #88bb7e;
-  background-image: url("../img/tile-wide.png");
-  background-repeat: no-repeat;
-  background-position: top center; }
-  .title-content, .title-content * {
-    color: white; }
