--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -1,65 +1,7 @@
-$OFN-grey: #808284
-$OFN-dark-grey: #616466
-$OFN-green: #88bb7e
-$OFN-blue: #61a1d7
+@import "colors.css.sass"
+@import "mixins.css.sass"
 
-@mixin padding
-	padding-top: 2em
-	padding-bottom: 2em
-
-@mixin quickanim
-	-webkit-transition: all 200ms ease-in
-	-moz-transition: all 200ms ease-in
-	-ms-transition: all 200ms ease-in
-	-o-transition: all 200ms ease-in
-	transition: all 200ms ease-in
-
-/* helper classes */
-
-.uppercase
-	text-transform: uppercase
-
-h1, h2, h3, h4, h5, h6
-	&.heading-skinny
-		font-weight: 300
-	&.heading-normal
-		font-weight: 400
-
-.text-skinny
-	font-weight: 300
-.text-normal
-	font-weight: 400
-
-.text-large
-	font-size: 1.2352em
-	
-.text-larger
-	font-size: 1.41176em
-
-/* responsive images */
-
-.responsive-icon
-	width: 25%
-	@media all and (min-width: 768px)
-		width: 100%
-
-/* navbar  & homepage - custom color */
-#off-canvas, #header-navigation,  
-	&.background-color-2
-		background-color: white
-body.home.page
-	.navbar.background-color-1 
-		background-color: white
-
-/* mobile navbar */
-header .nav-default > .navbar-default .navbar-toggle .icon-bar
-	background-color: $OFN-grey
-
-
-header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a, .off-canvas-inner .off-menu > ul li a
-	color: rgba($OFN-grey, 0.6)
-	&:hover, &:focus, &:active, header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a
-		color: rgba($OFN-grey, 1.0)
+/* homepage */
 
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1
@@ -67,24 +9,6 @@ header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.
 	background-repeat: no-repeat
 	background-position: bottom center
 
-/* Container width overrides */
-.cactus-single-page .single-page-content
-	padding-left: 20px
-	padding-right: 20px
-	@media all and (min-width: 1200px)
-		padding-left: 60px
-		padding-right: 60px
-
-
-/* theme overrides */
-h1, h2, h3, h4, h5, h6
-	clear: none
-
-h2, h3, h4, h5, h6
-	margin-bottom: 0.5em
-
-
-/* homepage */
 .header-v2.slider
 	.text-content
 		.text-1.font-1
@@ -100,7 +24,7 @@ h2, h3, h4, h5, h6
 
 .home-support
 	@include padding
-	background-color: rgba($OFN-green, 0.2)
+	background-color: rgba($OFN-brand, 0.2)
 	padding-left: 30px
 	padding-right: 30px
 	p 
@@ -154,23 +78,4 @@ h2, h3, h4, h5, h6
 .home-infographic
 	@include padding
 
-
-
-// Blog & news pages only
-body.blog #body-wrap
-	background-color: #f2f2f2
-
-
-// Standard pages
-.title-content
-	text-align: center
-	padding-top: 3rem
-	padding-bottom: 3.5rem
-	background-color: $OFN-green
-	background-image: url('../img/tile-wide.png')
-	background-repeat: no-repeat
-	background-position: top center
-	&, & *
-		color: white
-
-
+	
