Adding new template page type
New style partials

--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6
 h2, h3, h4, h5, h6
 	margin-bottom: 0.5em
 
-// Standard pages
+// Standard pages - heading with color + tiles
 .title-content
 	text-align: center
 	padding-top: 3rem
