--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -1,10 +1,175 @@
-@import "colors.css.sass"
-@import "mixins.css.sass"
-@import "navbar.css.sass"
-@import "helper-classes.css.sass"
-@import "home.css.sass"
 
 
+/*
+/*
+/* Custom colors */
+
+/* Primary theme color - change this to represent your OFN instance: */
+$OFN-brand: #88bb7e
+
+/* Secondary theme colors */
+$OFN-grey: #808284
+$OFN-dark-grey: #616466
+$OFN-blue: #61a1d7
+
+
+/*
+/*
+/* Mixins */
+
+@mixin padding
+	padding-top: 2em
+	padding-bottom: 2em
+
+@mixin quickanim
+	-webkit-transition: all 200ms ease-in
+	-moz-transition: all 200ms ease-in
+	-ms-transition: all 200ms ease-in
+	-o-transition: all 200ms ease-in
+	transition: all 200ms ease-in
+
+
+
+/*
+/*
+/* helper classes */
+
+.uppercase
+	text-transform: uppercase
+
+h1, h2, h3, h4, h5, h6
+	&.heading-skinny
+		font-weight: 300
+	&.heading-normal
+		font-weight: 400
+
+.text-skinny
+	font-weight: 300
+.text-normal
+	font-weight: 400
+
+.text-large
+	font-size: 1.2352em
+	
+.text-larger
+	font-size: 1.41176em
+
+/* responsive images */
+
+.responsive-icon
+	width: 25%
+	@media all and (min-width: 768px)
+		width: 100%
+
+
+.body-content ul > li > a, .body-content ol > li > a, a 
+	color: darken($OFN-brand, 10%)
+
+/*
+/*
+/* navbar  & homepage - custom color */
+#off-canvas, #header-navigation,  
+	&.background-color-2
+		background-color: white
+body.home.page
+	.navbar.background-color-1 
+		background-color: white
+
+/* mobile navbar */
+header .nav-default > .navbar-default .navbar-toggle .icon-bar
+	background-color: $OFN-grey
+
+
+header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a, .off-canvas-inner .off-menu > ul li a
+	color: rgba($OFN-grey, 0.6)
+	&:hover, &:focus, &:active, header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a
+		color: rgba($OFN-grey, 1.0)
+
+
+
+/*
+/*
+/* homepage */
+
+/* homepage bg tile */
+#header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1
+	background-image: url('../img/tile-wide.png')
+	background-repeat: no-repeat
+	background-position: bottom center
+
+.header-v2.slider
+	.text-content
+		.text-1.font-1
+		.text-3.font-1
+			display: none
+		.text-2.font-3
+			text-align: center
+			font-family: 'Oswald'
+			font-weight: 400
+			font-size: 82px
+			margin-top: 40px
+
+
+.home-support
+	@include padding
+	background-color: rgba($OFN-brand, 0.2)
+	padding-left: 30px
+	padding-right: 30px
+	p 
+		font-size: 1.41176em
+		font-weight: 300
+	@media all and (min-width: 992px)
+		padding-left: 60px
+		padding-right: 60px
+
+.home-brand-story
+	@include padding
+	padding-left: 30px
+	padding-right: 30px
+	p
+		font-size: 1.41176em
+		font-weight: 300
+	.hidden-content
+		display: none
+	@media all and (min-width: 992px)
+		padding-left: 60px
+		padding-right: 60px
+
+.home-demographics
+	@include padding
+	// img
+	img.home-demographic
+		@include quickanim
+		width: 20%
+		opacity: 1
+		&:hover, &:focus, &:active
+			opacity: 0.7
+		@media all and (min-width: 1024px)
+			width: 50%
+	// column
+	.vc_col-sm-4.vc_column_container
+		padding-top: 2em
+		padding-bottom: 2em
+		padding-left: 30px
+		padding-right: 30px
+		background-color: rgba($OFN-blue, 0.1)
+		@media all and (min-width: 768px) and (max-width: 1024px)
+			width: 100%
+	.vc_column_container:nth-child(1)
+		background-color: rgba($OFN-blue, 0.1)
+	.vc_column_container:nth-child(2)
+		background-color: rgba($OFN-blue, 0.15)
+	.vc_column_container:nth-child(3)
+		background-color: rgba($OFN-blue, 0.2)
+
+
+.home-infographic
+	@include padding
+
+	
+
+/*
+/*
 /* Container width overrides */
 .cactus-single-page .single-page-content
 	padding-left: 20px
@@ -35,3 +200,23 @@ h2, h3, h4, h5, h6
 // Blog & news pages only
 body.blog #body-wrap
 	background-color: #f2f2f2
+
+
+/*
+/*
+/* User Guide */
+
+.cactus-sidebar.sidebar-left.user-guide-sidebar
+	.widget_nav_menu
+		ul#menu-user-guide
+			li
+				font-weight: 700
+			li > a, ul.sub-menu li > a
+				font-size: 0.823rem
+				padding-left: 16px
+				&:hover, &:active, &:focus
+					color: darken($OFN-brand, 10%)
+
+
+
+
