--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -106,8 +106,7 @@ header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.
 /* homepage bg tile */
 #header-navigation.index-v2 .cactus-wraper-slider-bg .background-color-1
 	background-image: url('../img/tile-wide.png')
-	background-repeat: no-repeat
-	background-position: bottom center
+	background-position: center center
 
 .header-v2.slider
 	.text-content
