Make navbar position absolute again

--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -73,7 +73,7 @@ body.home.page
 	.navbar.background-color-1 
 		background-color: white
 header .nav-default > .navbar-default
-	position: static
+	// position: static
 
 .alert.alert-shop
 	background-color: lighten($OFN-brand, 30%)
